# Python-GitHub-Example

./: .buildinfo  .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  library_demo.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-documentation.yml  python-package.yml  unit-tests.yml
_sources/: index.rst.txt
docs/source/: conf.py
mylibrary/: __init__.py  mylibrary.py
test/: test_mylibrary.py
