[tool.poetry]
name = "mylibrary"
version = "0.0.1"
description = "This is a demo/test Python project"
authors = ["Thomas Graf <tngraf@gmx.de>"]
license = "MIT License"
readme = "README.md"
include = ["LICENSE"]
repository = "https://github.com/tngraf/Python-GitHub-Example"
homepage = "https://github.com/tngraf/Python-GitHub-Example"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.6"
colorama = "^0.3.7"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.1"
flake8 = ">=3.7.8"
coverage = "^5.3"
black = "^19.10b0"
# codecov = "^2.0.22"
pyflakes = "^2.2.0"

[tool.poetry.scripts]
test = 'scripts:test'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

